--- a/index.html
+++ b/index.html
@@ -119,12 +119,13 @@
               >
                 <i class="fas fa-search text-primary"></i>
               </button>
-              <a href="#" class="position-relative me-4 my-auto">
+              <a class="position-relative me-4 my-auto" href="cart.html">
                 <i class="fa fa-shopping-bag fa-2x"></i>
                 <span
+                  id="cart"
                   class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
                   style="top: -5px; left: 15px; height: 20px; min-width: 20px"
-                  >3</span
+                  >7</span
                 >
               </a>
               <a href="#" class="my-auto">
@@ -418,7 +419,7 @@
                           class="text-white bg-secondary px-3 py-1 rounded position-absolute"
                           style="top: 10px; left: 10px"
                         >
-                          Shop Name
+                          Fruitables
                         </div>
                         <div
                           class="p-4 border border-secondary border-top-0 rounded-bottom"
