--- a/index.html
+++ b/index.html
@@ -138,28 +138,33 @@
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <form action="https://formspree.io/f/xzbowpjq" method="POST">
-                <div class="form">
-                    <div class="form-txt">
-                        <h4>INFORMATION</h4>
-                        <h1>Contact Us</h1>
-                        <span>As you might expect of a company that began as a high-end interiors contractor, we pay
-                            strict
-                            attention.</span>
-                        <h3>USA</h3>
-                        <p>195 E Parker Square Dr, Parker, CO 801<br>+43 982-314-0958</p>
-                        <h3>India</h3>
-                        <p>HW95+C9C, Lorem ipsum dolor sit.<br>411014</p>
-                    </div>
-                    <div class="form-details">
-                        <input type="text" name="name" id="name" placeholder="Name" required>
-                        <input type="email" name="email" id="email" placeholder="Email" required>
-                        <textarea name="message" id="message" cols="52" rows="7" placeholder="Message"
-                            required></textarea>
-                        <button>SEND MESSAGE</button>
-                    </div>
-                </div>
-            </form>
+<form action="" method="POST" id="contactForm">
+    <div class="form">
+        <div class="form-txt">
+            <h4>INFORMATION</h4>
+            <h1>Contact Us</h1>
+            <span>As you might expect of a company that began as a high-end interiors contractor, we pay strict
+                attention.</span>
+            <h3>USA</h3>
+            <p>195 E Parker Square Dr, Parker, CO 801<br>+43 982-314-0958</p>
+            <h3>India</h3>
+            <p>HW95+C9C, Lorem ipsum dolor sit.<br>411014</p>
+        </div>
+        <div class="form-details">
+            <input type="text" name="name" id="name" placeholder="Name" required>
+            <span id="nameError" class="error-message"></span> <!-- Error message for name -->
+
+            <input type="email" name="email" id="email" placeholder="Email" required>
+            <span id="emailError" class="error-message"></span> <!-- Error message for email -->
+
+            <textarea name="message" id="message" cols="52" rows="7" placeholder="Message" required></textarea>
+            <span id="messageError" class="error-message"></span> <!-- Error message for message -->
+
+            <button type="button" id="sendBtn">SEND MESSAGE</button>
+        </div>
+    </div>
+</form>
+
         </div>
     </section>
     <footer>
