--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul class="menu-items">
                 <li><a href="#home">Home</a></li>
                 <li><a href="products.html">Shop</a></li>
-                <li><a href="#news">Blog</a></li>
+                <li><a href="cart.html">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="logo">
@@ -67,7 +67,7 @@
             </div>
         </div>
     </section>
-
+<!-- <span id="cart-count">0</span> -->
 <section id="collection">
     <div class="collections container"></div>
 <section >
