--- a/products.html
+++ b/products.html
@@ -69,8 +69,8 @@
                                 <i class='bx bxs-circle white'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                         <!-- <div class="add-cart">
                             <button>Add To Cart</button>
@@ -98,8 +98,8 @@
                                 <i class='bx bxs-circle brown'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -124,8 +124,8 @@
                                 <i class='bx bxs-circle blue'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -150,8 +150,8 @@
                                 <i class='bx bxs-circle blue'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -178,8 +178,8 @@
                                 <i class='bx bxs-circle white'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                         <!-- <div class="add-cart">
                                         <button>Add To Cart</button>
@@ -207,8 +207,8 @@
                                 <i class='bx bxs-circle brown'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -233,8 +233,8 @@
                                 <i class='bx bxs-circle blue'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -259,8 +259,8 @@
                                 <i class='bx bxs-circle blue'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -287,8 +287,8 @@
                                 <i class='bx bxs-circle white'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                         <!-- <div class="add-cart">
                                         <button>Add To Cart</button>
@@ -316,8 +316,8 @@
                                 <i class='bx bxs-circle brown'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -342,8 +342,8 @@
                                 <i class='bx bxs-circle blue'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -368,8 +368,8 @@
                                 <i class='bx bxs-circle blue'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -399,8 +399,8 @@
                                 <i class='bx bxs-circle brown'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -425,8 +425,8 @@
                                 <i class='bx bxs-circle green'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -451,8 +451,8 @@
                                 <i class='bx bxs-circle blank'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -477,8 +477,8 @@
                                 <i class='bx bxs-circle blue'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -508,8 +508,8 @@
                                 <i class='bx bxs-circle blue'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -534,8 +534,8 @@
                                 <i class='bx bxs-circle brown'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -560,8 +560,8 @@
                                 <i class='bx bxs-circle blue'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
@@ -586,8 +586,8 @@
                                 <i class='bx bxs-circle brown'></i>
                             </div>
                         </div>
-                        <div class="buy-now">
-                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Buy Now</a></button>
+                        <div class="add-to-cart">
+                            <button><a href="https://codepen.io/sanketbodke/full/mdprZOq">Add to Cart</a></button>
                         </div>
                     </div>
                 </div>
