--- a/singleProduct.html
+++ b/singleProduct.html
@@ -187,10 +187,10 @@
                   <i class="bx bxs-circle blue"></i>
                 </div>
               </div>
-              <div class="buy-now">
+              <div class="add-to-cart">
                 <button>
                   <a href="https://codepen.io/sanketbodke/full/mdprZOq"
-                    >Buy Now</a
+                    >Add to Cart</a
                   >
                 </button>
               </div>
@@ -217,10 +217,10 @@
                   <i class="bx bxs-circle brown"></i>
                 </div>
               </div>
-              <div class="buy-now">
+              <div class="add-to-cart">
                 <button>
                   <a href="https://codepen.io/sanketbodke/full/mdprZOq"
-                    >Buy Now</a
+                    >Add to Cart</a
                   >
                 </button>
               </div>
@@ -247,10 +247,10 @@
                   <i class="bx bxs-circle blue"></i>
                 </div>
               </div>
-              <div class="buy-now">
+              <div class="add-to-cart">
                 <button>
                   <a href="https://codepen.io/sanketbodke/full/mdprZOq"
-                    >Buy Now</a
+                    >Add to Cart</a
                   >
                 </button>
               </div>
@@ -277,10 +277,10 @@
                   <i class="bx bxs-circle brown"></i>
                 </div>
               </div>
-              <div class="buy-now">
+              <div class="add-to-cart">
                 <button>
                   <a href="https://codepen.io/sanketbodke/full/mdprZOq"
-                    >Buy Now</a
+                    >Add to Cart</a
                   >
                 </button>
               </div>
