--- a/singleProduct.html
+++ b/singleProduct.html
@@ -44,7 +44,7 @@
     </nav>
     <!-- product start -->
     <div class="singleProductContainer">
-      <div class="half">
+      <div class="half1">
         <img
           id="main-image"
           src="https://i.postimg.cc/8CmBZH5N/shoes.webp"
@@ -53,7 +53,7 @@
           alt="Product Image"
         />
       </div>
-      <div class="half">
+      <div class="half2">
         <div class="product p-4">
           <div class="d-flex justify-content-between align-items-center">
             <div
@@ -69,7 +69,7 @@
             <span class="text-uppercase text-muted brand" id="product-brand"
               >apple</span
             >
-            <h5 class="text-uppercase" id="product-name">rayondshoes</h5>
+            <h5 class="text-uppercase name" id="product-name">rayondshoes</h5>
             <div class="price d-flex flex-row align-items-center">
               <span class="act-price" id="product-price">₹ 7777</span>
               <div class="ml-2">
@@ -119,7 +119,7 @@
     </div>
     <!-- product end -->
 
-    <script>
+    <!-- <script>
       // Function to parse URL query parameters
       function getQueryParams() {
         const params = new URLSearchParams(window.location.search);
@@ -160,7 +160,7 @@
           "$" + discountPrice.toFixed(2);
         document.getElementById("discount-off").textContent = "40% OFF"; // Adjust this as needed based on your logic
       });
-    </script>
+    </script> -->
 
     <section id="sellers">
       <div class="seller container">
